--- a/kết thúc môn/Giới thiệu.html
+++ b/kết thúc môn/Giới thiệu.html
@@ -204,7 +204,7 @@ nav ul li a:hover {
       </div>
     </li>
 
-    <li><a href="#">Liên hệ</a></li>
+    <li><a href="Liên hệ.html">Liên hệ</a></li>
   </ul>
 </nav>
 
