--- a/kết thúc môn/Trang sức vàng.html
+++ b/kết thúc môn/Trang sức vàng.html
@@ -254,7 +254,6 @@
       border-radius: 20px;
     }
     .footer {
-    background-color: #fff;
     padding: 40px 80px;
     border-top: 1px solid #ddd;
     display: flex;
@@ -389,7 +388,7 @@
       </div>
     </li>
 
-    <li><a href="#">Liên hệ</a></li>
+    <li><a href="Liên hệ.html">Liên hệ</a></li>
   </ul>
 </nav>
 
@@ -401,9 +400,9 @@
   <div class="tenTS">Trang sức vàng</div>
   <div class="sanpham-wrapper">
     <div class="sanpham"><a href="sp1.html"><img src="bộ 1.jpeg"></a><div class="ten">Bộ trang sức Vàng 18K Jewelry Lá Ngọc Cành Vàng 00020-00005</div><div class="gia">203.463.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
-    <div class="sanpham"><img src="Vòng Đeo Tay JEWELRY Dazzling Swan Bracele.jpg"><div class="ten">Vòng Đeo Tay JEWELRY Dazzling Swan Bracele</div><div class="gia">2,500,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
-    <div class="sanpham"><img src="Vòng Đeo Tay JEWELRY Infinity Heart Bangle.jpg"><div class="ten">Vòng Đeo Tay JEWELRY Infinity Heart Bangle</div><div class="gia">4,000,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
-    <div class="sanpham"><img src="Vòng Đeo Tay Nữ JEWELRY Generation Bangle White.jpg"><div class="ten">Vòng Đeo Tay Nữ JEWELRY Generation Bangle White</div><div class="gia">3,800,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
+    <div class="sanpham"><a href="sp3.html"><img src="bông tai hồng ngọc.jpg"></a><div class="ten">Vòng Đeo Tay JEWELRY Dazzling Swan Bracele</div><div class="gia">11.612.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
+    <div class="sanpham"><a href="sp2.html"><img src="lắc tay sao.jpg"></a><div class="ten">Lắc tay Vàng 10K Sweeties 0000Y004493</div><div class="gia">7.155.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
+    <div class="sanpham"><a href="sp4.html"><img src="lắc tay vàng.jpg"></a><div class="ten">Lắc tay Vàng 10K Đính đá Ruby <br> Magnétique RBXMY000212</div><div class="gia">16.283.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
     <div class="sanpham"><img src="Bông tai bạc 10k.jpg"><div class="ten">Nhẫn vàng 24k</div><div class="gia">5,000,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
     <div class="sanpham"><img src="Bông tai bạc 10k.jpg"><div class="ten">Bông tai vàng</div><div class="gia">2,500,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
     <div class="sanpham"><img src="Bông tai bạc 10k.jpg"><div class="ten">Dây chuyền vàng</div><div class="gia">4,000,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
