--- a/kết thúc môn/sp2.html
+++ b/kết thúc môn/sp2.html
@@ -370,28 +370,25 @@
 <div class="anhsp">
   <div class="product-gallery">
     <div class="thumbnails">
-      <img src="bộ 1.jpeg" alt="thumb1" class="active" />
-      <img src="cổ.jpeg" alt="thumb2" />
-      <img src="tai.jpeg" alt="thumb3" />
-      <img src="tay.jpeg" alt="thumb4" />
+      <img src="lắc tay sao.jpg" alt="thumb1" class="active" />
+      <img src="z7210197522898_258209b41092f47077ee865a832a7bc3.jpg" alt="thumb2" />
+      <img src="z7210197522915_e60bb1fbe210fc656becdbe8200f42e0.jpg" alt="thumb3" />
+      <img src="z7210197558645_0abad7dba81b32ffc08bb5eb52b8f8cb.jpg" alt="thumb4" />
     </div>
     <div class="main-image">
-      <img src="bộ 1.jpeg" alt="Ảnh chính" id="mainImage" />
+      <img src="lắc tay sao.jpg" alt="Ảnh chính" id="mainImage" />
     </div>
   </div>
 
   <div class="product-info">
-    <h1>Bộ trang sức Vàng 18K Jewelry Lá Ngọc Cành Vàng 00020-00005</h1>
-    <p class="code">Mã: GBQT00Y000020-GHQT00Y000001-GVQT00Y000005</p>
-    <p class="price">203.463.000 ₫</p>
+    <h1>Lắc tay Vàng 10K Sweeties 0000Y004493</h1>
+    <p class="code">Mã: GL0000Y004493</p>
+    <p class="price">7.155.000 ₫</p>
     <p class="note">(Giá sản phẩm thay đổi tùy trọng lượng vàng và đá)</p>
     <p class="size">Vui lòng chọn size</p>
     <select>
       <option>Chọn size tay</option>
-      <option>Size 14</option>
       <option>Size 16</option>
-      <option>Size 18</option>
-      <option>Size 20</option>
     </select>
     <div class="buttons">
       <button class="btn-buy" style="color: #fff;">Mua ngay</button>
