--- a/kết thúc môn/sp3.html
+++ b/kết thúc môn/sp3.html
@@ -370,29 +370,22 @@
 <div class="anhsp">
   <div class="product-gallery">
     <div class="thumbnails">
-      <img src="bộ 1.jpeg" alt="thumb1" class="active" />
-      <img src="cổ.jpeg" alt="thumb2" />
-      <img src="tai.jpeg" alt="thumb3" />
-      <img src="tay.jpeg" alt="thumb4" />
+      <img src="bông tai hồng ngọc.jpg" alt="thumb1" class="active" />
+      <img src="z7210260225456_4e789a78bfbacaa8445f3bd6e98f0e1d.jpg" alt="thumb2" />
+      <img src="z7210260298269_17f46cff6801a9be1806e7b24600a134.jpg" alt="thumb3" />
+      <img src="z7210260366276_b19dcb3a3712bab10e575aee9e00f0cd.jpg" alt="thumb4" />
     </div>
     <div class="main-image">
-      <img src="bộ 1.jpeg" alt="Ảnh chính" id="mainImage" />
+      <img src="bông tai hồng ngọc.jpg" alt="Ảnh chính" id="mainImage" />
     </div>
   </div>
 
   <div class="product-info">
-    <h1>Bộ trang sức Vàng 18K Jewelry Lá Ngọc Cành Vàng 00020-00005</h1>
-    <p class="code">Mã: GBQT00Y000020-GHQT00Y000001-GVQT00Y000005</p>
-    <p class="price">203.463.000 ₫</p>
+    <h1>Bông tai Vàng 10K Đính đá Ruby Magnétique RBXMY000392</h1>
+    <p class="code">Mã: GBRBXMY000392</p>
+    <p class="price">11.612.000 ₫</p>
     <p class="note">(Giá sản phẩm thay đổi tùy trọng lượng vàng và đá)</p>
-    <p class="size">Vui lòng chọn size</p>
-    <select>
-      <option>Chọn size tay</option>
-      <option>Size 14</option>
-      <option>Size 16</option>
-      <option>Size 18</option>
-      <option>Size 20</option>
-    </select>
+    
     <div class="buttons">
       <button class="btn-buy" style="color: #fff;">Mua ngay</button>
       <button class="btn-buy" id="them-giohang" style="color:#c20; background:#fff; border:1px solid #c20;">Thêm vào giỏ hàng</button>
