--- a/kết thúc môn/Trang chủ.html
+++ b/kết thúc môn/Trang chủ.html
@@ -270,7 +270,6 @@ nav ul li a:hover {
   font-size:12px;
 }
 .footer {
-    background-color: #fff;
     padding: 40px 80px;
     border-top: 1px solid #ddd;
     display: flex;
@@ -404,7 +403,7 @@ nav ul li a:hover {
         </div>
       </div>
     </li>
-    <li><a href="#">Liên hệ</a></li>
+    <li><a href="Liên hệ.html">Liên hệ</a></li>
   </ul>
 </nav>
 
@@ -418,11 +417,11 @@ nav ul li a:hover {
   <div class="slie slie-vang">
     <button class="trai trai-vang">&#10094;</button>
     <div class="slie-wrapper slie-wrapper-vang">
-      <div class="sanpham"><img src="Bông tai bạc 10k.jpg"><div class="ten">Nhẫn vàng 18k</div><div class="gia">3,200,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
-      <div class="sanpham"><img src="Bông tai bạc 10k.jpg"><div class="ten">Bông tai vàng</div><div class="gia">2,500,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
-      <div class="sanpham"><img src="Bông tai bạc 10k.jpg"><div class="ten">Dây chuyền vàng</div><div class="gia">4,000,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
-      <div class="sanpham"><img src="Bông tai bạc 10k.jpg"><div class="ten">Lắc tay vàng</div><div class="gia">3,800,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
-      <div class="sanpham"><img src="Bông tai bạc 10k.jpg"><div class="ten">Nhẫn vàng 24k</div><div class="gia">5,000,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
+      <div class="sanpham"><a href="sp1.html"><img src="bộ 1.jpeg"></a><div class="ten">Bộ trang sức Vàng 18K Jewelry <br>Lá Ngọc Cành Vàng 00020-00005</div><div class="gia">203.463.000 đ</div><button class="mua-ngay">Mua ngay</button></div>
+      <div class="sanpham"><a href="sp2.html"><img src="lắc tay sao.jpg"></a><div class="ten">Lắc tay Vàng 10K Sweeties <br>0000Y004493</div><div class="gia">7.155.000 đ</div><button class="mua-ngay">Mua ngay</button></div>
+      <div class="sanpham"><a href="sp3.html"><img src="bông tai hồng ngọc.jpg"></a><div class="ten">Bông tai Vàng 10K Đính đá Ruby <br> Magnétique RBXMY000392</div><div class="gia">11.612.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
+      <div class="sanpham"><a href="sp4.html"><img src="lắc tay vàng.jpg"></a><div class="ten">Lắc tay Vàng 10K Đính đá Ruby <br> Magnétique RBXMY000212</div><div class="gia">16.283.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
+      <div class="sanpham"><a href="#"><img src="Bông tai bạc 10k.jpg"></a><div class="ten">Nhẫn vàng 24k</div><div class="gia">5,000,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
       <div class="xemthem"><a href="Trang sức vàng.html">XEM THÊM</a></div>
     </div>
     <button class="phai phai-vang">&#10095;</button>
@@ -434,11 +433,11 @@ nav ul li a:hover {
   <div class="slie slie-bac">
     <button class="trai trai-bac">&#10094;</button>
     <div class="slie-wrapper slie-wrapper-bac">
-      <div class="sanpham"><img src="Bông tai bạc 10k.jpg"><div class="ten">Nhẫn bạc</div><div class="gia">1,200,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
-      <div class="sanpham"><img src="Bông tai bạc 10k.jpg"><div class="ten">Bông tai bạc</div><div class="gia">950,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
-      <div class="sanpham"><img src="Bông tai bạc 10k.jpg"><div class="ten">Dây chuyền bạc</div><div class="gia">1,800,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
-      <div class="sanpham"><img src="Bông tai bạc 10k.jpg"><div class="ten">Lắc tay bạc</div><div class="gia">1,650,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
-      <div class="sanpham"><img src="Bông tai bạc 10k.jpg"><div class="ten">Nhẫn bạc đặc biệt</div><div class="gia">2,000,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
+      <div class="sanpham"><a href="#"><img src="Bông tai bạc 10k.jpg"></a><div class="ten">Nhẫn bạc</div><div class="gia">1,200,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
+      <div class="sanpham"><a href="#"><img src="Bông tai bạc 10k.jpg"></a><div class="ten">Bông tai bạc</div><div class="gia">950,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
+      <div class="sanpham"><a href="#"><img src="Bông tai bạc 10k.jpg"></a><div class="ten">Dây chuyền bạc</div><div class="gia">1,800,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
+      <div class="sanpham"><a href="#"><img src="Bông tai bạc 10k.jpg"></a><div class="ten">Lắc tay bạc</div><div class="gia">1,650,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
+      <div class="sanpham"><a href="#"><img src="Bông tai bạc 10k.jpg"></a><div class="ten">Nhẫn bạc đặc biệt</div><div class="gia">2,000,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
       <div class="xemthem"><a href="">XEM THÊM</a></div>
     </div>
     <button class="phai phai-bac">&#10095;</button>
@@ -450,11 +449,11 @@ nav ul li a:hover {
   <div class="slie slie-kc">
     <button class="trai trai-kc">&#10094;</button>
     <div class="slie-wrapper slie-wrapper-kc">
-      <div class="sanpham"><img src="Bông tai bạc 10k.jpg"><div class="ten">Nhẫn kim cương</div><div class="gia">12,000,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
-      <div class="sanpham"><img src="Bông tai bạc 10k.jpg"><div class="ten">Bông tai kim cương</div><div class="gia">15,000,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
-      <div class="sanpham"><img src="Bông tai bạc 10k.jpg"><div class="ten">Dây chuyền kim cương</div><div class="gia">20,000,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
-      <div class="sanpham"><img src="Bông tai bạc 10k.jpg"><div class="ten">Lắc tay kim cương</div><div class="gia">18,000,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
-      <div class="sanpham"><img src="Bông tai bạc 10k.jpg"><div class="ten">Nhẫn kim cương VIP</div><div class="gia">25,000,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
+      <div class="sanpham"><a href="#"><img src="Bông tai bạc 10k.jpg"></a><div class="ten">Nhẫn kim cương</div><div class="gia">12,000,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
+      <div class="sanpham"><a href="#"><img src="Bông tai bạc 10k.jpg"></a><div class="ten">Bông tai kim cương</div><div class="gia">15,000,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
+      <div class="sanpham"><a href="#"><img src="Bông tai bạc 10k.jpg"></a><div class="ten">Dây chuyền kim cương</div><div class="gia">20,000,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
+      <div class="sanpham"><a href="#"><img src="Bông tai bạc 10k.jpg"></a><div class="ten">Lắc tay kim cương</div><div class="gia">18,000,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
+      <div class="sanpham"><a href="#"><img src="Bông tai bạc 10k.jpg"></a><div class="ten">Nhẫn kim cương VIP</div><div class="gia">25,000,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
       <div class="xemthem"><a href="">XEM THÊM</a></div>
     </div>
     <button class="phai phai-kc">&#10095;</button>
