--- a/kết thúc môn/sp4.html
+++ b/kết thúc môn/sp4.html
@@ -370,28 +370,26 @@
 <div class="anhsp">
   <div class="product-gallery">
     <div class="thumbnails">
-      <img src="bộ 1.jpeg" alt="thumb1" class="active" />
-      <img src="cổ.jpeg" alt="thumb2" />
-      <img src="tai.jpeg" alt="thumb3" />
-      <img src="tay.jpeg" alt="thumb4" />
+      <img src="lắc tay vàng.jpg" alt="thumb1" class="active" />
+      <img src="z7210318345185_ed95358445cb8ee9b7b054e396bb1d81.jpg" alt="thumb2" />
+      <img src="z7210318345207_d02c4c5a2e3bd8f806b7d135c056ca57.jpg" alt="thumb3" />
+      <img src="z7210318382818_85a3676482ae26cf37f7b3bf9feed729.jpg" alt="thumb4" />
     </div>
     <div class="main-image">
-      <img src="bộ 1.jpeg" alt="Ảnh chính" id="mainImage" />
+      <img src="lắc tay vàng.jpg" alt="Ảnh chính" id="mainImage" />
     </div>
   </div>
 
   <div class="product-info">
-    <h1>Bộ trang sức Vàng 18K Jewelry Lá Ngọc Cành Vàng 00020-00005</h1>
-    <p class="code">Mã: GBQT00Y000020-GHQT00Y000001-GVQT00Y000005</p>
-    <p class="price">203.463.000 ₫</p>
+    <h1>Lắc tay Vàng 10K Đính đá Ruby Magnétique RBXMY000212</h1>
+    <p class="code">Mã: GLRBXMY000212</p>
+    <p class="price">16.283.000 ₫</p>
     <p class="note">(Giá sản phẩm thay đổi tùy trọng lượng vàng và đá)</p>
     <p class="size">Vui lòng chọn size</p>
     <select>
       <option>Chọn size tay</option>
-      <option>Size 14</option>
       <option>Size 16</option>
-      <option>Size 18</option>
-      <option>Size 20</option>
+      <option>Size 17</option>
     </select>
     <div class="buttons">
       <button class="btn-buy" style="color: #fff;">Mua ngay</button>
