--- a/kết thúc môn/Giới thiệu.html
+++ b/kết thúc môn/Giới thiệu.html
@@ -137,7 +137,9 @@ nav ul li a:hover {
   border-radius: 20px;
 }
 .quangcao img {
-  border-radius: 20px;
+      width: 1000px;
+      height: 300px;
+      border-radius: 20px;
 }
 </style>
 </head>
