--- a/kết thúc môn/sp4.html
+++ b/kết thúc môn/sp4.html
@@ -392,9 +392,13 @@
       <option>Size 17</option>
     </select>
     <div class="buttons">
-      <button class="btn-buy" style="color: #fff;">Mua ngay</button>
-      <button class="btn-buy" id="them-giohang" style="color:#c20; background:#fff; border:1px solid #c20;">Thêm vào giỏ hàng</button>
+      <button class="btn-buy" style="color: #fff;">Mua ngay
+        <br><span><i>(Giao hàng miễn phí  tận nhà hoặc tại cửa hàng)</i></span>
+      </button>
+      <p>
+        <button class="btn-buy" id="them-giohang" style="color:#c20; background:#fff; border:1px solid #c20;">Thêm vào giỏ hàng</button>
       <button class="btn-buy" style="color:#c20; background:#fff; border:1px solid #c20;">Gọi ngay (miễn phí)</button>
+      </p>
       <div class="services">
         <span>🚚 Miễn phí giao hàng</span>
         <span>🕒 Phục vụ 24/7</span>
