--- a/kết thúc môn/Giới thiệu.html
+++ b/kết thúc môn/Giới thiệu.html
@@ -56,6 +56,7 @@ nav {
   margin-top: 10px;
   position: relative;
   z-index: 999;
+  background-color: white;
 }
 nav ul {
   list-style-type: none;
@@ -86,7 +87,7 @@ nav ul li a:hover {
   position: absolute;
   left: 0;
   top: 100%;
-  background: #fffaf5;
+  background-color: #fffaf5;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
   padding: 20px 30px;
   width: auto;
