--- a/kết thúc môn/Trang sức vàng.html
+++ b/kết thúc môn/Trang sức vàng.html
@@ -56,6 +56,7 @@
       margin-top: 10px;
       position: relative;
       z-index: 999;
+      background-color: white;
     }
     nav ul {
       list-style-type: none;
