--- a/kết thúc môn/sp3.html
+++ b/kết thúc môn/sp3.html
@@ -387,9 +387,13 @@
     <p class="note">(Giá sản phẩm thay đổi tùy trọng lượng vàng và đá)</p>
     
     <div class="buttons">
-      <button class="btn-buy" style="color: #fff;">Mua ngay</button>
-      <button class="btn-buy" id="them-giohang" style="color:#c20; background:#fff; border:1px solid #c20;">Thêm vào giỏ hàng</button>
+      <button class="btn-buy" style="color: #fff;">Mua ngay
+        <br><span><i>(Giao hàng miễn phí  tận nhà hoặc tại cửa hàng)</i></span>
+      </button>
+      <p>
+        <button class="btn-buy" id="them-giohang" style="color:#c20; background:#fff; border:1px solid #c20;">Thêm vào giỏ hàng</button>
       <button class="btn-buy" style="color:#c20; background:#fff; border:1px solid #c20;">Gọi ngay (miễn phí)</button>
+      </p>
       <div class="services">
         <span>🚚 Miễn phí giao hàng</span>
         <span>🕒 Phục vụ 24/7</span>
