--- a/kết thúc môn/Trang chủ.html
+++ b/kết thúc môn/Trang chủ.html
@@ -472,7 +472,7 @@ nav ul li a:hover {
       <div class="sanpham"><a href="sp2.html"><img src="lắc tay sao.jpg"></a><div class="ten">Lắc tay Vàng 10K Sweeties <br>0000Y004493</div><div class="gia">7.155.000 đ</div><button class="mua-ngay">Mua ngay</button></div>
       <div class="sanpham"><a href="sp3.html"><img src="bông tai hồng ngọc.jpg"></a><div class="ten">Bông tai Vàng 10K Đính đá Ruby <br> Magnétique RBXMY000392</div><div class="gia">11.612.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
       <div class="sanpham"><a href="sp4.html"><img src="lắc tay vàng.jpg"></a><div class="ten">Lắc tay Vàng 10K Đính đá Ruby <br> Magnétique RBXMY000212</div><div class="gia">16.283.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
-      <div class="sanpham"><a href="#"><img src="Bông tai bạc 10k.jpg"></a><div class="ten">Nhẫn vàng 24k</div><div class="gia">5,000,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
+      <div class="sanpham"><a href="sp5.html"><img src="Dây cổ Vàng 18K đính đá Citrine Masterpiece CTMXC000013.jpg"></a><div class="ten">Dây cổ Vàng 18K đính đá Citrine <br>Masterpiece CTMXC000013</div><div class="gia">341.097.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
       <div class="xemthem"><a href="Trang sức vàng.html">XEM THÊM</a></div>
     </div>
     <button class="phai phai-vang">&#10095;</button>
