--- a/kết thúc môn/sp3.html
+++ b/kết thúc môn/sp3.html
@@ -371,9 +371,9 @@
   <div class="product-gallery">
     <div class="thumbnails">
       <img src="bông tai hồng ngọc.jpg" alt="thumb1" class="active" />
-      <img src="z7210260225456_4e789a78bfbacaa8445f3bd6e98f0e1d.jpg" alt="thumb2" />
-      <img src="z7210260298269_17f46cff6801a9be1806e7b24600a134.jpg" alt="thumb3" />
-      <img src="z7210260366276_b19dcb3a3712bab10e575aee9e00f0cd.jpg" alt="thumb4" />
+      <img src="bông tai hồng ngọc1.jpg" alt="thumb2" />
+      <img src="bông tai hồng ngọc2.jpg" alt="thumb3" />
+      <img src="bông tai hồng ngọc3.jpg" alt="thumb4" />
     </div>
     <div class="main-image">
       <img src="bông tai hồng ngọc.jpg" alt="Ảnh chính" id="mainImage" />
