--- a/kết thúc môn/sp4.html
+++ b/kết thúc môn/sp4.html
@@ -371,9 +371,9 @@
   <div class="product-gallery">
     <div class="thumbnails">
       <img src="lắc tay vàng.jpg" alt="thumb1" class="active" />
-      <img src="z7210318345185_ed95358445cb8ee9b7b054e396bb1d81.jpg" alt="thumb2" />
-      <img src="z7210318345207_d02c4c5a2e3bd8f806b7d135c056ca57.jpg" alt="thumb3" />
-      <img src="z7210318382818_85a3676482ae26cf37f7b3bf9feed729.jpg" alt="thumb4" />
+      <img src="lắc tay vàng 1.jpg" alt="thumb2" />
+      <img src="lắc tay vàng 2.jpg" alt="thumb3" />
+      <img src="lắc tay vàng 3.jpg" alt="thumb4" />
     </div>
     <div class="main-image">
       <img src="lắc tay vàng.jpg" alt="Ảnh chính" id="mainImage" />
