--- a/kết thúc môn/sp7.html
+++ b/kết thúc môn/sp7.html
@@ -370,26 +370,21 @@
 <div class="anhsp">
   <div class="product-gallery">
     <div class="thumbnails">
-      <img src="lắc tay sao.jpg" alt="thumb1" class="active" />
-      <img src="lắc tay sao 1.jpg" alt="thumb2" />
-      <img src="lắc tay sao 2.jpg" alt="thumb3" />
-      <img src="lắc tay sao 3.jpg" alt="thumb4" />
+      <img src="Bông tai Vàng 18K đính đá Citrine PNJ Masterpiece CTMXC000001.jpg" alt="thumb1" class="active" />
+      <img src="Bông tai Vàng 18K đính đá Citrine PNJ Masterpiece CTMXC000002.jpg" alt="thumb2" />
+      <img src="Bông tai Vàng 18K đính đá Citrine PNJ Masterpiece CTMXC000003.jpg" alt="thumb3" />
+      <img src="Bông tai Vàng 18K đính đá Citrine PNJ Masterpiece CTMXC000004.jpg" alt="thumb4" />
     </div>
     <div class="main-image">
-      <img src="lắc tay sao.jpg" alt="Ảnh chính" id="mainImage" />
+      <img src="Bông tai Vàng 18K đính đá Citrine PNJ Masterpiece CTMXC000001.jpg" alt="Ảnh chính" id="mainImage" />
     </div>
   </div>
 
   <div class="product-info">
-    <h1>Lắc tay Vàng 10K Sweeties 0000Y004493</h1>
-    <p class="code">Mã: GL0000Y004493</p>
-    <p class="price">7.155.000 ₫</p>
+    <h1>Bông tai Vàng 18K đính đá Citrine Masterpiece CTMXC000005</h1>
+    <p class="code">Mã: GBCTMXC000005</p>
+    <p class="price">42.072.000 ₫</p>
     <p class="note">(Giá sản phẩm thay đổi tùy trọng lượng vàng và đá)</p>
-    <p class="size">Vui lòng chọn size</p>
-    <select>
-      <option>Chọn size tay</option>
-      <option>Size 16</option>
-    </select>
     <div class="buttons">
       <button class="btn-buy" style="color: #fff;">Mua ngay
         <br><span><i>(Giao hàng miễn phí  tận nhà hoặc tại cửa hàng)</i></span>
