--- a/kết thúc môn/Trang sức vàng.html
+++ b/kết thúc môn/Trang sức vàng.html
@@ -401,12 +401,12 @@
   <div class="tenTS">Trang sức vàng</div>
   <div class="sanpham-wrapper">
     <div class="sanpham"><a href="sp1.html"><img src="bộ 1.jpeg"></a><div class="ten">Bộ trang sức Vàng 18K Jewelry Lá Ngọc Cành Vàng 00020-00005</div><div class="gia">203.463.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
-    <div class="sanpham"><a href="sp3.html"><img src="bông tai hồng ngọc.jpg"></a><div class="ten">Vòng Đeo Tay JEWELRY Dazzling Swan Bracele</div><div class="gia">11.612.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
+    <div class="sanpham"><a href="sp3.html"><img src="bông tai hồng ngọc.jpg"></a><div class="ten">Bông tai hồng ngọc 10k </div><div class="gia">11.612.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
     <div class="sanpham"><a href="sp2.html"><img src="lắc tay sao.jpg"></a><div class="ten">Lắc tay Vàng 10K Sweeties 0000Y004493</div><div class="gia">7.155.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
     <div class="sanpham"><a href="sp4.html"><img src="lắc tay vàng.jpg"></a><div class="ten">Lắc tay Vàng 10K Đính đá Ruby <br> Magnétique RBXMY000212</div><div class="gia">16.283.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
-    <div class="sanpham"><img src="Bông tai bạc 10k.jpg"><div class="ten">Nhẫn vàng 24k</div><div class="gia">5,000,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
-    <div class="sanpham"><img src="Bông tai bạc 10k.jpg"><div class="ten">Bông tai vàng</div><div class="gia">2,500,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
-    <div class="sanpham"><img src="Bông tai bạc 10k.jpg"><div class="ten">Dây chuyền vàng</div><div class="gia">4,000,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
+    <div class="sanpham"><a href="sp5.html"><img src="Dây cổ Vàng 18K đính đá Citrine Masterpiece CTMXC000013.jpg"></a><div class="ten">Dây cổ Vàng 18K đính đá Citrine Masterpiece CTMXC000013</div><div class="gia">341.097.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
+    <div class="sanpham"><a href="sp6.html"><img src="Nhẫn Vàng 18K đính đá Citrine PNJ Masterpiece CTMXC000002.jpg"></a><div class="ten">Nhẫn Vàng 18K đính đá Citrine Masterpiece CTMXC000002</div><div class="gia">41.832.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
+    <div class="sanpham"><a href="sp7.html"><img src="Bông tai Vàng 18K đính đá Citrine PNJ Masterpiece CTMXC000001.jpg"></a><div class="ten">Bông tai Vàng 18K đính đá Citrine Masterpiece CTMXC000005</div><div class="gia">42.072.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
     <div class="sanpham"><img src="Bông tai bạc 10k.jpg"><div class="ten">Lắc tay vàng</div><div class="gia">3,800,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
  
   </div>
@@ -423,20 +423,6 @@
     <div class="sanpham"><img src="Bông tai bạc 10k.jpg"><div class="ten">Dây chuyền vàng</div><div class="gia">4,000,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
     <div class="sanpham"><img src="Bông tai bạc 10k.jpg"><div class="ten">Lắc tay vàng</div><div class="gia">3,800,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
     
-</section>
-
-<section class="section">
-  <div class="sanpham-wrapper">
-    <div class="sanpham"><img src="Bông tai bạc 10k.jpg"><div class="ten">Nhẫn kim cương</div><div class="gia">12,000,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
-    <div class="sanpham"><img src="Bông tai bạc 10k.jpg"><div class="ten">Bông tai kim cương</div><div class="gia">15,000,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
-    <div class="sanpham"><img src="Bông tai bạc 10k.jpg"><div class="ten">Dây chuyền kim cương</div><div class="gia">20,000,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
-    <div class="sanpham"><img src="Bông tai bạc 10k.jpg"><div class="ten">Lắc tay kim cương</div><div class="gia">18,000,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
-    <div class="sanpham"><img src="Bông tai bạc 10k.jpg"><div class="ten">Nhẫn kim cương VIP</div><div class="gia">25,000,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
-    <div class="sanpham"><img src="Bông tai bạc 10k.jpg"><div class="ten">Bông tai vàng</div><div class="gia">2,500,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
-    <div class="sanpham"><img src="Bông tai bạc 10k.jpg"><div class="ten">Dây chuyền vàng</div><div class="gia">4,000,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
-    <div class="sanpham"><img src="Bông tai bạc 10k.jpg"><div class="ten">Lắc tay vàng</div><div class="gia">3,800,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
-
-  </div>
 </section>
 
 <!-- Giỏ hàng popup -->
