--- a/kết thúc môn/sp5.html
+++ b/kết thúc môn/sp5.html
@@ -370,25 +370,27 @@
 <div class="anhsp">
   <div class="product-gallery">
     <div class="thumbnails">
-      <img src="lắc tay sao.jpg" alt="thumb1" class="active" />
-      <img src="lắc tay sao 1.jpg" alt="thumb2" />
-      <img src="lắc tay sao 2.jpg" alt="thumb3" />
-      <img src="lắc tay sao 3.jpg" alt="thumb4" />
+      <img src="Dây cổ Vàng 18K đính đá Citrine Masterpiece CTMXC000013.jpg" alt="thumb1" class="active" />
+      <img src="Dây cổ Vàng 18K đính đá Citrine Masterpiece CTMXC000014.jpg" alt="thumb2" />
+      <img src="Dây cổ Vàng 18K đính đá Citrine Masterpiece CTMXC000015.jpg" alt="thumb3" />
+      <img src="Dây cổ Vàng 18K đính đá Citrine Masterpiece CTMXC000016.jpg" alt="thumb4" />
     </div>
     <div class="main-image">
-      <img src="lắc tay sao.jpg" alt="Ảnh chính" id="mainImage" />
+      <img src="Dây cổ Vàng 18K đính đá Citrine Masterpiece CTMXC000013.jpg" alt="Ảnh chính" id="mainImage" />
     </div>
   </div>
 
   <div class="product-info">
-    <h1>Lắc tay Vàng 10K Sweeties 0000Y004493</h1>
-    <p class="code">Mã: GL0000Y004493</p>
-    <p class="price">7.155.000 ₫</p>
+    <h1>Dây cổ Vàng 18K đính đá Citrine Masterpiece CTMXC000013</h1>
+    <p class="code">Mã: GCCTMXC000013</p>
+    <p class="price">341.097.000 ₫</p>
     <p class="note">(Giá sản phẩm thay đổi tùy trọng lượng vàng và đá)</p>
     <p class="size">Vui lòng chọn size</p>
     <select>
       <option>Chọn size tay</option>
-      <option>Size 16</option>
+      <option>Size 40</option>
+      <option>Size 41</option>
+      <option>Size 42</option>
     </select>
     <div class="buttons">
       <button class="btn-buy" style="color: #fff;">Mua ngay
